--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,25 @@ repositories {
 	}
 }
 
+// Process resources on build
+processResources {
+	// This will ensure that this task is redone when the versions change.
+	inputs.property 'version', project.version
+
+	// Replace stuff in mods.toml, nothing else
+	from(sourceSets.main.resources.srcDirs) {
+		include 'META-INF/mods.toml'
+
+		// Replace version
+		expand 'version':project.version
+	}
+
+	// Copy everything else except the mods.toml
+	from(sourceSets.main.resources.srcDirs) {
+		exclude 'META-INF/mods.toml'
+	}
+}
+
 sourceSets.main.resources {
 	srcDir 'src/generated/resources'
 }
