--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="MIT"
 
 [[mods]]
 modId="advancementplaques"
-version="0.1"
+version="${version}"
 displayName="Advancement Plaques"
 displayURL="https://anthonyhilyard.com/"
 logoFile="icon.png"
