In-progress commit.  Not functional yet.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.14
+loader_version=0.11.6
+
 name=AdvancementPlaques
 group=com.anthonyhilyard.advancementplaques
 author=anthonyhilyard
 version=1.2.4
-mcVersion=1.16.5
-mappingsVersion=20201028-1.16.3
-forgeVersion=36.1.0
+fabric_version=0.37.0+1.17
+
+cloth_version=5.0.34
