Added custom sounds for tasks and goals.

--- a/build.gradle
+++ b/build.gradle
@@ -53,23 +53,19 @@ processResources {
 	}
 }
 
-configurations {
-	provided
-}
 
 sourceSets {
 	main {
 		resources {
 			srcDir 'src/generated/resources'
 		}
-		compileClasspath += configurations.provided
 	}
 }
 
 dependencies {
 	minecraft 'net.minecraftforge:forge:' + project.properties.mcVersion + '-' + forgeVersion
-	provided fg.deobf('curse.maven:toastcontrol-271740:3172881')
-	provided fg.deobf('curse.maven:jade-324717:3302544')
+	implementation fg.deobf('curse.maven:toastcontrol-271740:3172881')
+	implementation fg.deobf('curse.maven:jade-324717:3302544')
 }
 
 jar {
