--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,14 @@ buildscript {
 	}
 }
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'eclipse'
 
 archivesBaseName = name + '-' + mcVersion
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-	mappings 'snapshot', project.properties.mappingsVersion
+	mappings channel: 'official', version: project.mcVersion
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	runs {
 		client = {
@@ -64,8 +65,8 @@ sourceSets {
 
 dependencies {
 	minecraft 'net.minecraftforge:forge:' + project.properties.mcVersion + '-' + forgeVersion
-	implementation fg.deobf('curse.maven:toastcontrol-271740:3172881')
-	implementation fg.deobf('curse.maven:jade-324717:3302544')
+	implementation fg.deobf('curse.maven:toastcontrol-271740:2871647')
+	implementation fg.deobf('curse.maven:hwyla-253449:2880069')
 }
 
 jar {
