--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 	}
 }
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'eclipse'
 
 archivesBaseName = name + '-' + mcVersion
 
