--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	modCompileOnly "mcp.mobius.waila:wthit:fabric-${wthitVersion}"
+	modCompileOnly "mcp.mobius.waila:wthit:fabric-${wthit_version}"
 }
 
 loom {
