--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ minecraft {
 		client = {
 			properties 'forge.logging.markers': ''
 			properties 'forge.logging.console.level': 'debug'
+			properties 'terminal.ansi': 'true'
 			workingDirectory project.file('run').canonicalPath
 			source sourceSets.main
 		}
@@ -46,6 +47,8 @@ sourceSets {
 
 dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
+	compileOnly 'curse.maven:iceberg-520110:3491123'
+	runtimeOnly 'curse.maven:iceberg-520110:3491123'
 	implementation fg.deobf('curse.maven:jade-324717:3400050')
 }
 
