--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-name=AdvancementPlaques
-group=com.anthonyhilyard.advancementplaques
+name=${rootProject.name}
+group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
-version=1.3.1
+version=1.4.0
 mcVersion=1.17.1
-forgeVersion=37.0.18
+forgeVersion=37.0.90
