--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,6 +22,13 @@ description="Replaces standard advancement toasts with fancy plaques."
 [[dependencies.advancementplaques]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="[1.17.1,1.18)"
+	versionRange="[1.17.1]"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.advancementplaques]]
+	modId="iceberg"
+	mandatory=true
+	versionRange="[1.0.13,)"
 	ordering="NONE"
 	side="BOTH"
