--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,6 @@ pluginManagement {
 		gradlePluginPortal()
 	}
 }
+
+// Set the root project name so that the workspace folder name doesn't mess stuff up.
+rootProject.name = "AdvancementPlaques" 
