--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.14
-loader_version=0.11.6
-
-name=AdvancementPlaques
-group=com.anthonyhilyard.advancementplaques
+name=${rootProject.name}
+group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
-version=1.4.1
-fabric_version=0.37.0+1.17
-cloth_version=5.0.34
-wthit_version=3.9.1
+version=1.4.3
+
+mcVersion=1.18
+fabricVersion=0.44.0+1.18
+loaderVersion=0.12.8
+clothVersion=6.0.42
+wthitVersion=3.9.1
