--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 minecraft {
 	mappings channel: 'official', version: project.mcVersion
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
 	runs {
-		client = {
+		client {
 			properties 'forge.logging.markers': ''
 			properties 'forge.logging.console.level': 'debug'
 			properties 'terminal.ansi': 'true'
@@ -35,21 +36,16 @@ repositories {
 	}
 }
 
-sourceSets {
-	main {
-		resources {
-			srcDir 'src/generated/resources'
-		}
-	}
-}
-
 dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
 
-	implementation fg.deobf('curse.maven:iceberg-520110:3675774')
+	implementation fg.deobf('curse.maven:iceberg-520110:3832980')
+
 	implementation fg.deobf('curse.maven:placebo-283644:3781199')
 	implementation fg.deobf('curse.maven:toastcontrol-271740:3717855')
-	implementation fg.deobf('curse.maven:jade-324717:3761542')
+
+	implementation fg.deobf('curse.maven:jade-324717:3834997')
+	implementation fg.deobf('curse.maven:wthit-455982:3835298')
 }
 
 jar {
