--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.daemon=false
 name=${rootProject.name}
 group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
-version=1.4.4
+version=1.4.5
 
-mcVersion=1.18
-fabricVersion=0.44.0+1.18
-loaderVersion=0.12.8
-clothVersion=6.0.42
-wthitVersion=3.9.1
+mcVersion=1.19
+fabricVersion=0.55.1+1.19
+loaderVersion=0.14.6
+forgeConfigApiVersion=4.0.0
+wthitVersion=5.4.3
