--- a/build.gradle
+++ b/build.gradle
@@ -35,31 +35,23 @@ repositories {
 	}
 }
 
-sourceSets {
-	main {
-		resources {
-			srcDir 'src/generated/resources'
-		}
-	}
-}
-
 dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
 
-	implementation fg.deobf('curse.maven:iceberg-520110:3561115')
-	implementation fg.deobf('curse.maven:placebo-283644:3568836')
-	implementation fg.deobf('curse.maven:toastcontrol-271740:3566996')
-	implementation fg.deobf('curse.maven:jade-324717:3551337')
+	implementation fg.deobf('curse.maven:iceberg-520110:3675774')
+	implementation fg.deobf('curse.maven:placebo-283644:3781199')
+	implementation fg.deobf('curse.maven:toastcontrol-271740:3717855')
+	implementation fg.deobf('curse.maven:wthit-455982:3834228')
 }
 
 jar {
 	manifest {
-		attributes(["Specification-Title": project.name,
-					"Specification-Vendor": project.author,
-					"Specification-Version": "24.0",
-					"Implementation-Title": project.name,
-					"Implementation-Version": project.version,
-					"Implementation-Vendor" : project.author,
+		attributes(["Specification-Title":		project.name,
+					"Specification-Vendor":		project.author,
+					"Specification-Version":	project.version,
+					"Implementation-Title":		project.name,
+					"Implementation-Version":	project.version,
+					"Implementation-Vendor" :	project.author,
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
 	}
 }
