--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 name=AdvancementPlaques
 group=com.anthonyhilyard.advancementplaques
 author=anthonyhilyard
-version=1.4.1
+version=1.4.2-patched
 
 mcVersion=1.16.5
 forgeVersion=36.1.0
