--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
 version=1.5.1
 
-mcVersion=1.20.2
-fabricVersion=0.91.1+1.20.2
+mcVersion=1.20.4
+fabricVersion=0.92.0+1.20.4
 loaderVersion=0.15.0
-forgeConfigApiVersion=9.1.0
-wthitVersion=9.1.2
+forgeConfigApiVersion=20.4.0
+wthitVersion=10.0.0
